--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.1",
     "dayjs": "^1.11.7",
+    "dotenv": "^16.0.3",
     "ionicons": "^6.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
